# ersatz

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
ersatz/: ClangFormatter.cpp  ClangFormatter.hpp  Codegen.cpp  Codegen.hpp  CodegenLang.hpp  CodegenLangTraits.cpp  CodegenLangTraits.hpp  FunctionBuilder.cpp  FunctionBuilder.hpp  PreambleBuilder.cpp  PreambleBuilder.hpp  VariableBuilder.cpp  VariableBuilder.hpp
ersatz/dep/: catchOnce.hpp
ersatz/dep/fmt/: core.h  format.h
example/: Codegen_Python.cpp  Codegen_demo.cpp  Codegen_formatting.cpp
test/: Codegen_test.cpp
